# court-coordinator

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: push-to-website-repo.yml
artifacts/: checksums.txt
contracts/court-coordinator/: Cargo.toml
contracts/court-coordinator/src/: contract.rs  error.rs  lib.rs  msg.rs  proposed_msg.rs  tests.rs  workarounds.rs
contracts/court-coordinator/src/contract/: admin.rs  permissionless.rs  user.rs
contracts/court-coordinator/src/state/: app.rs  user.rs
contracts/court-coordinator/src/tests/: contract_execution.rs
contracts/court-coordinator/src/tests/contract_execution/: admin_change_admin.rs  admin_change_config.rs  admin_disallow_new_proposals.rs  admin_mint_shares.rs  deactivate_votes.rs  execute_proposal.rs  helpers.rs  user_propose_transaction.rs  user_stake_votes.rs  user_unstake_votes.rs  user_vote.rs
scripts/: build.sh  build_optimizer.sh  deploy_contracts.ts  package.json  sdk_codegen.sh  tsconfig.json
scripts/optimizer_workarounds/: entrypoint.sh
